style.css
@import url(http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic&subset=latin,greek-ext,devanagari,cyrillic,latin-ext,vietnamese,cyrillic-ext);
@import url(http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic|Noto+Serif:400,700,400italic,700italic|Droid+Serif:400,700,400italic,700italic|Quando);
html {
	height: 100%;
	margin: 0;
	padding: 0;
	overflow: hidden;
	background: #ed1c24;
}
body { 
	margin: 0;
	padding: 0;
	background: #ed1c24;
	transition: background 200ms ease;
	-o-transition: background 200ms ease;
	-moz-transition: background 200ms ease;
	-webkit-transition: background 200ms ease;
	min-width: 630px;
	color: white;
	font-family: 'Noto Sans', serif;
}
body * {
	text-rendering: optimizeLegibility;
	font-smoothing: antialiased;
	-o-font-smoothing: antialiased;
	-moz-font-smoothing: antialiased;
	-webkit-font-smoothing: antialiased;
	-o-osx-font-smoothing: grayscale;
	-moz-osx-font-smoothing: grayscale;
}
body {
	opacity: 0;
	transition: opacity 200ms ease-in-out 400ms;
	-o-transition: opacity 200ms ease-in-out 400ms;
	-moz-transition: opacity 200ms ease-in-out 400ms;
	-webkit-transition: opacity 200ms ease-in-out 400ms;
}
body.init  {
	opacity: 1;
}
section {
	position: relative;
	display: table;
	width: 100%;
}
.logoWrapper {
	z-index: 200;
	position: fixed;
	top:0;
	left: 0;
	width: 100%;
	height: 100%;
	display: table;
	transition: height 400ms ease-in-out, opacity 150ms ease;
	-o-transition: height 400ms ease-in-out, opacity 150ms ease;
	-moz-transition: height 400ms ease-in-out, opacity 150ms ease;
	-webkit-transition: height 400ms ease-in-out, opacity 150ms ease;
}
.logoWrapper .vert div {
	display: table;
	margin: auto;
}
.logoWrapper .vert div img.logo {
	width:400px;
	transition: all 400ms ease-in-out;
	-o-transition: all 400ms ease-in-out;
	-moz-transition: all 400ms ease-in-out;
	-webkit-transition: all 400ms ease-in-out;
}
.mobile .logoWrapper .vert div img.logo {
	width: 200px;
}
.openFooter .logoWrapper#text {
	opacity: 0;

}
.logoWrapper.fixed {
	height: 120px;
}
.logoWrapper.fixed div img.logo {
	width:190px;
}
#startTxt {
	position: absolute;
	left: 0;
	width: 100%;
}
.mobile #startTxt {
	display: none;
}
#startBtn {
	font-family: 'Noto Sans', sans-serif;
	text-align: center;
	color: white;
	font-weight: 700;
	font-size: 20px;
}
#startBtn:hover {
	cursor: pointer;
}
.mobile #authorize {
	display: none;
}
#authorize .container {
	display: table-cell;
	vertical-align: middle;
}
#authorize .container .inner, #authorize .container #circle {
	width: 359px;
	height: 400px;
	display: block;
	margin: auto;
	position: relative;
}
#authorize .container #complete {
	overflow:hidden;
	height: 0px;
	width: 100%;
	opacity: 0;
	transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
	-o-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
	-moz-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
	-webkit-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
}
#authorize.completed .container #complete {
	height: 500px;
	opacity: 1;
}
#authorize .container #complete .inner {
	width: 720px;
	height: auto;
	transition: transform 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
	-o-transition: -o-transform 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
	-moz-transition: -moz-transform 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
	-webkit-transition: -webkit-transform 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
	transform: translateY(1000px);
	-o-transform: translateY(1000px);
	-moz-transform: translateY(1000px);
	-webkit-transform: translateY(1000px);
}
#authorize .container #complete .inner {
	transform: translateY(0px);
	-o-transform: translateY(0px);
	-moz-transform: translateY(0px);
	-webkit-transform: translateY(0px);
}
#authorize .container #bar {
	position: absolute;
	left: 0;
	top: 0;
	height: 100%;
	width: 0;
	background: url(/img/bar.png);
	background-repeat: repeat-x;
	background-size: 1px 5px;
	background-position: center;
	transition: all 200ms ease-in 300ms;
	-o-transition: all 200ms ease-in 300ms;
	-moz-transition: all 200ms ease-in 300ms;
	-webkit-transition: all 200ms ease-in 300ms;
}
#authorize.checkingSources #bar {
	width: 300px;
}
#smiley {
	position: absolute;
	height: 100%;
	width: 100%;
	left: 0;
	top: 0;
	display: table;
	z-index: 100; /*in front of webcam*/
	opacity: 0;
	background: transparent;
	transition: all 150ms ease-in-out;
	-o-transition: all 150ms ease-in-out;
	-moz-transition: all 150ms ease-in-out;
	-webkit-transition: all 150ms ease-in-out;
}
.show #smiley {
	transform: scale(1);
	-o-transform: scale(1);
	-moz-transform: scale(1);
	-webkit-transform: scale(1);
}
.instructing #smiley {
	opacity: 1;
	background: white;
}
#authorize .container .inner #smiley img {
	width: 230px;
	height: 230px;
	display: table;
	margin: auto;
}

#detectionOverlay {
	position: absolute;
	display: table;
	z-index: 100;
}
.checkingSources #face, .checkingSources #webcam { 
	opacity: 0;
}
#webcam {
	display: block;
	position: absolute;
	z-index: 99;
}
.instructing #webcam {
	display: none;
}

#authorize{
	transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
	-o-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
	-moz-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
	-webkit-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
}
#authorize.scanning #webcam {
	opacity: 1;
}
#authorize.top {
	/*padding-top: 100px;
	height: 400px !important;*/
}
#circle {
	shape-padding: 15px;
	shape-inside: circle(0% at 50% 50%);
  	-webkit-clip-path: circle(0% at 50% 50%);
  	overflow: hidden;
}
/* ... */

